fix(store): Phase 1 review round — both reviewers' findings landed, gate re-confirmed
Concurrency reviewer (MAJOR-1 + 4 minors): StoreHit null-bytes validated as errored miss;
last-resort catch restored in the submit lambda (anti-wedge — the seam SQLite sits
behind); op-path Error rethrow removed (unobservable + would double-deliver); tombstone
idle sweep; mem_hits after decompress; live-mode diag token (store=unavailable);
deposit rules harmonized.
Plan-fidelity reviewer (MAJOR-1 + 6 minors): hit-rate CURVE swept across caps
(0.00/0.04/0.32/1.00 at 1/2/4/8MB — deep-pressure refill-churn collapse documented as
the tier's operating envelope), store.deposit_skips through every schema site (identity
enqueued == deposits+drops+skips), gate-evidence numbers re-quoted from the archive,
LodStoreService contract reworded implementation-neutral, shutdown-flush fan-out pinned,
gen deposit un-gated from sent.

Gate soak re-confirmed PASS after all fixes (run 20260730T225019Z).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>